tests/if/var_in_else.lox
// error
if (true) "ok"; else var foo;
